<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_premium"
            android:icon="@drawable/ic_nav_premium"
            android:title="@string/unlock_premium" />
        <item
            android:id="@+id/nav_item_aboutus"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_item_faq"
            android:icon="@drawable/ic_nav_faq"
            android:title="@string/faqs" />
        <item
            android:id="@+id/nav_item_datasec"
            android:icon="@drawable/ic_nav_security"
            android:title="@string/data_security" />
        <item
            android:id="@+id/nav_item_help"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/help_support" />
        <item
            android:id="@+id/nav_item_terms"
            android:icon="@drawable/ic_nav_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/nav_item_data_account"
            android:icon="@drawable/ic_account"
            android:title="@string/data_account" />
        <item
            android:id="@+id/nav_item_currency"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/currency" />
        <item
            android:id="@+id/nav_item_amount_decimals"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/amount_display" />
    </group>

    <group
        android:id="@+id/nav_group_account"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
